# open_sima2

./: .gitignore  README.md  TIMING_EXPLAINED.md  TRAINING_PIPELINE.md  agent.py  agentplay.py  analyze_dataset.py  pyproject.toml  qwen_vision_model.py  requirements.txt  test_keyboard_control.py  test_mouse_control.py  train_vision_agent.py
archive/: qwen_vision_model.py  screencapture.py  test_mouse_control.py
notebooks/: unsloth_models.ipynb
notebooks/unsloth_compiled_cache/: AqlmLoraLinear_peft_forward.py  AwqLoraLinear_peft_forward.py  BatchNorm1d.py  Conv3d.py  ConvTranspose1d.py  ConvTranspose2d.py  ConvTranspose3d.py  GPTQLoraLinear_peft_forward.py  GroupNorm.py  LayerNorm.py  Linear4bit_peft_forward.py  Linear8bitLt_peft_forward.py  Linear_peft_forward.py  LoraParallelLinear_peft_forward.py  RMSNorm.py  UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py  unsloth_compiled_module_qwen3_vl.py  unsloth_compiled_module_siglip.py
src/: __init__.py  continuos_recoder.py  game_controls.py  label_segments.py  screen_capture.py  vision_agent.py
