[project]
name = "open-sima2"
version = "0.1.0"
description = "Open implementation of SIMA 2: An Agent that Plays, Reasons, and Learns With You in Virtual 3D Worlds"
requires-python = ">=3.10,<3.14"
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.20.1",
    "numpy",
    "opencv-python",
    "mss",
    "Pillow",
    "transformers>=4.57.1",
    "accelerate>=1.12.0",
    "bitsandbytes>=0.48.2",
    "peft>=0.18.0",
    "trl>=0.22.0",
    "datasets>=4.3.0",
    "pydantic>=2.12.4",
    "unsloth>=2025.11.6",
    "unsloth-zoo>=2025.11.6",
    "wandb",
]
